<resources>
    <string name="app_name">ProjectAiR</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">logout</string>
    <string name="enter_todo_title">Enter Todo title</string>
    <string name="add_todo">Add Todo</string>
    <string name="delete_done">Delete done</string>
    <string name="example">Example</string>
    <string name="_00_00_00">00:00:00 0000.00.00</string>
    <string name="startingClockTime">00:00:00 AM</string>
    <string name="go_back">Go back</string>
    <string name="info">Info</string>
    <string name="init_text">init text</string>
    <string name="initial_info">Initial info</string>
    <string name="change_image">Change Image</string>
    <string name="glider">Glider</string>
</resources>