<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1c1c1b"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".gyro">

    <TextView
        android:id="@+id/tvSquare"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="#e82917"
        android:text="@string/init_text"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/gyroInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0c94e8"
        android:text="@string/initial_info" />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/goBackGyro"
        android:text="@string/go_back"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"/>

</LinearLayout>