<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".clock">
    <Button
        android:layout_width="wrap_content"
        android:text="@string/go_back"
        android:id="@+id/buttonGoBack"
        android:layout_height="wrap_content"/>
    <com.example.projectair.CustomAnalogClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/analogClock"
        />
    <TextClock
        android:layout_width="wrap_content"
        android:id="@+id/digitalClock"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:text="@string/info"
        android:id="@+id/info"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goToGlider"
        android:text="@string/glider"/>
</LinearLayout>